fixed spacing on password verifier modal and started merging namh branch

--- a/view/src/css/mealDisplay.css
+++ b/view/src/css/mealDisplay.css
@@ -15,7 +15,7 @@
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-  width: 75%;
+  width: 60%;
 }
 
 .custom-checkbox {
